objects/Product_Manager__c.object
<CustomObject>
    <description>Product Manager Master</description>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email ID</description>
        <inlineHelpText>Email ID</inlineHelpText>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User ID</description>
        <inlineHelpText>User ID</inlineHelpText>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Product Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>